# gmail-r2-backup

./: .gitignore  AGENTS.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
gmail_r2_backup/: __init__.py  backup.py  cli.py  config.py  gmail.py  models.py  naming.py  r2.py  restore.py  state.py
tests/: conftest.py  test_config.py  test_gmail_scopes.py  test_naming.py  test_restore_helpers.py  test_restore_marker.py  test_state_store.py
