[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gmail-r2-backup"
version = "0.1.0"
description = "Back up a consumer Gmail account to Cloudflare R2 (S3-compatible) using the Gmail API."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "gmail-r2-backup contributors" }]
dependencies = [
  "boto3>=1.28",
  "google-api-python-client>=2.120",
  "google-auth>=2.20",
  "google-auth-oauthlib>=1.2",
  "platformdirs>=4.0",
  "pydantic>=2.0",
  "pydantic-settings>=2.0",
  "python-dotenv>=1.0",
  "typer>=0.9",
]

[project.scripts]
gmail-r2-backup = "gmail_r2_backup.cli:main"

[dependency-groups]
dev = [
  "mypy>=1.10",
  "pytest>=8.0",
  "pytest-cov>=5.0",
]

[tool.setuptools]
packages = ["gmail_r2_backup"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = ["-q"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
disallow_untyped_calls = false
warn_unused_ignores = true
warn_return_any = true
no_implicit_optional = true
